# partitioner

./: CMakeLists.txt
headers/: config.h  csr_pattern.h  dof_handler.h  fine_mesh.h  mesh_element.h  parameters.h  sym_csr_pattern.h  triangle.h
sources/: csr_pattern.cpp  dof_handler.cpp  fine_mesh.cpp  main.cpp  math_functions.cpp  mesh_element.cpp  parameters.cpp  sym_csr_pattern.cpp  triangle.cpp
